2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>

	* Makefile.am: Setup a default gconf source on make install
	* galeon.spec.in: Distribute also the path file and
	the directories for the default source
	* gconf/Makefile.am: install the default path as "path" instead
	of "path.example". Add GCONF_ETCDIR define.
	* gconf/gconftool.c: Add --get-default-source option
	* gconf/gconf.m4.in: Add GCONF_SCHEMA_CONFIG_SOURCE macro
	
2001-07-28  Yanko Kaneti  <yaneti@declera.com>

	* gconf/gconftool.c (main): s/all-pairs/all-entries/ in the error
	messages

2001-07-24  Darin Adler  <darin@bentspoon.com>

	* acinclude.m4: Set BUILD_INCLUDED_LIBINTL for compatibility
	with newer versions of gettext.

2001-07-23  Havoc Pennington  <hp@redhat.com>

	* gconf/gconfd.c (main): don't warn about failure to create
	~/.gconfd if EEXIST

	* gconf/gconf.c (gconf_engine_all_entries): convert empty string 
	to NULL

	* gconf/gconf-database.c
	(impl_ConfigDatabase2_all_entries_with_schema_name): don't give
	ORBit any NULL strings in the array, avoids a core dump

	* gconf/gconftool.c (list_pairs_in_dir): put a newline after the
	error message

2001-07-23  Havoc Pennington  <hp@redhat.com>

	* configure.in: Remove checks for gnome-config, move to 1.0.3

2001-07-22  Havoc Pennington  <hp@redhat.com>

	* configure.in: version 1.0.2

2001-07-16  Havoc Pennington  <hp@redhat.com>

	* gconf/gconfd.c (main): add super-lame hack to 
	pass currently-running gconfd to oafd if oafd has lamely leaked it
	due to lame-assness

	* gconf/gconf-internals.c (gconf_get_lock): fix leak of object
	reference belonging to server that held the lock
	(gconf_get_lock_or_current_holder): add function to get current
	owner of a lock

	* gconf/GConf.idl: add subclass of ConfigDatabase for some
	exciting new hacky functions. 

	So an extensible IDL interface would probably have simply passed
	XML messages. But then what's the point of an IDL interface, if