@@ -810,9 +810,9 @@ gconf_load_source_path(const gchar* filename, GError** err)
     {
       if (err)
         *err = gconf_error_new(GCONF_ERROR_FAILED,
-                                _("Couldn't open path file `%s': %s\n"), 
-                                filename, 
-                                strerror(errno));
+                               _("Couldn't open path file `%s': %s\n"), 
+                               filename, 
+                               strerror(errno));
       return NULL;
     }
 
@@ -835,13 +835,18 @@ gconf_load_source_path(const gchar* filename, GError** err)
         {
           gchar* unq;
           gchar** included;
-
+          gchar *varsubst;
+          
           s += 7;
 
           unq = unquote_string(s);
 
-          included = gconf_load_source_path(unq, NULL);
+          varsubst = subst_variables (unq);
+          
+          included = gconf_load_source_path (varsubst, NULL);
 
+          g_free (varsubst);
+          
           if (included != NULL)
             {
               gchar** iter = included;
@@ -877,9 +882,9 @@ gconf_load_source_path(const gchar* filename, GError** err)
       /* This should basically never happen */
       if (err)
         *err = gconf_error_new(GCONF_ERROR_FAILED,
-                                _("Read error on file `%s': %s\n"), 
-                                filename,
-                                strerror(errno));
+                               _("Read error on file `%s': %s\n"), 
+                               filename,
+                               strerror(errno));
       /* don't return, we want to go ahead and return any 
          addresses we already loaded. */
     }
